examples/klee-out-0/test000001.div.err
Error: divide by zero
Stack: 
	#000000073 in klee_div_zero_check () at runtime/Intrinsic/klee_div_zero_check.c:14
	#100000053 in main ()
