examples/klee-out-0/test000001.kquery
array a[4] : w32 -> w8 = symbolic
(query [(Eq 4294967291
             (ReadLSB w32 0 a))]
        false)
